deploy/tracing/destinationrule-tempo.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: tempo-plaintext
  namespace: istio-system
spec:
  host: tempo.monitoring.svc.cluster.local
  exportTo:
  - "*"
  trafficPolicy:
    tls:
      mode: DISABLE
